Issue #16975: Fix error handling bug in the escape-decode decoder.